# ComfyUI-Excel_To_Prompt

./: README.md  __init__.py  pyproject.toml
js/: prompt_multi_generator.js
